fixed text-alignment

--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,7 @@ h11 {
 
 .countdowncontainer {
   margin: auto;
+  text-align: center;
 }
 /******************************************************** 
 about page
